fixes scaling issues; fixed alignment

--- a/styles.css
+++ b/styles.css
@@ -18,6 +18,7 @@ h1 {
     margin-left: auto;
     margin-right: auto;
     width: fit-content;
+    max-width: 70%;
     font-family: "Squada One";
     font-size: 72px;
     font-weight: bold;
@@ -45,7 +46,7 @@ h1 {
     right: 0;
     margin-left: auto;
     margin-right: auto;
-    margin-top: 10%;
+    margin-top: 154px;
     width: fit-content;
     color: #ff0011;
     font-size: 15px;
@@ -80,6 +81,7 @@ h1 {
 #nft-input {
     display: block;
     position: absolute;
+    height: 49px;
     left: 0;
     right: 0;
     text-align: center;
@@ -87,7 +89,7 @@ h1 {
     font-size: 32px;
     font-weight: bold;
     text-align: center;
-    margin: 13% 0 40px 0; 
+    margin: 200px 0 40px 0; 
     justify-content: space-between;
 }
 #nft_url {
@@ -103,11 +105,11 @@ h1 {
     background-position: 7px;
     background-color: #ffffff;
     border-radius: 6px;
-    outline: solid 2px #222222;
+    outline: solid 2.25px #222222;
     border: none;
     width: 30%;
-    padding: 15px;
-    padding-left: 37px;
+    height: 49px;
+    padding: 0 15px 0 37px;
     margin: 0 10px 0 10px;
     transition: outline-width .1s ease-in-out, transform .1s ease-in-out;
 }
@@ -120,9 +122,11 @@ h1 {
     z-index: 1;
     display: inline;
     cursor: pointer;
+    font-family: Arial, Helvetica, sans-serif;
     background-color: #ffffff;
-    padding: 16px 30px 16px 30px;
-    outline: solid 2px #222222;
+    padding: 0px 30px 0px 30px;
+    height: 49px;
+    outline: solid 2.25px #222222;
     border: none;
     border-radius: 5px;
     transition: outline-width .1s ease-in-out, transform .1s ease-in-out;
